refactor: the way of router function register for reverse proxy