@@ -1,15 +1,9 @@
 package run.halo.app.plugin;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
-import org.pf4j.PluginWrapper;
-import org.springframework.context.event.EventListener;
+import java.util.stream.Stream;
 import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
-import org.springframework.util.CollectionUtils;
 import org.springframework.web.reactive.function.server.HandlerFunction;
 import org.springframework.web.reactive.function.server.RouterFunction;
 import org.springframework.web.reactive.function.server.RouterFunctions;
@@ -17,9 +11,7 @@ import org.springframework.web.reactive.function.server.ServerRequest;
 import org.springframework.web.reactive.function.server.ServerResponse;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-import run.halo.app.plugin.event.HaloPluginStartedEvent;
-import run.halo.app.plugin.event.HaloPluginStoppedEvent;
-import run.halo.app.plugin.resources.ReverseProxyRouterFunctionFactory;
+import run.halo.app.plugin.resources.ReverseProxyRouterFunctionRegistry;
 
 /**
  * A composite {@link RouterFunction} implementation for plugin.
@@ -30,69 +22,37 @@ import run.halo.app.plugin.resources.ReverseProxyRouterFunctionFactory;
 @Component
 public class PluginCompositeRouterFunction implements RouterFunction<ServerResponse> {
 
-    private final Map<String, RouterFunction<ServerResponse>> routerFunctionRegistry =
-        new ConcurrentHashMap<>();
-
-    private final ReverseProxyRouterFunctionFactory reverseProxyRouterFunctionFactory;
+    private final ReverseProxyRouterFunctionRegistry reverseProxyRouterFunctionFactory;
 
     public PluginCompositeRouterFunction(
-        ReverseProxyRouterFunctionFactory reverseProxyRouterFunctionFactory) {
+        ReverseProxyRouterFunctionRegistry reverseProxyRouterFunctionFactory) {
         this.reverseProxyRouterFunctionFactory = reverseProxyRouterFunctionFactory;
-    }
-
-    public RouterFunction<ServerResponse> getRouterFunction(String pluginId) {
-        return routerFunctionRegistry.get(pluginId);
     }
 
     @Override
     @NonNull
     public Mono<HandlerFunction<ServerResponse>> route(@NonNull ServerRequest request) {
-        return Flux.fromIterable(routerFunctionRegistry.values())
+        return Flux.fromIterable(routerFunctions())
             .concatMap(routerFunction -> routerFunction.route(request))
             .next();
     }
 
     @Override
     public void accept(@NonNull RouterFunctions.Visitor visitor) {
-        routerFunctionRegistry.values().forEach(routerFunction -> routerFunction.accept(visitor));
-    }
-
-    /**
-     * Obtains the user-defined {@link RouterFunction} from the plugin
-     * {@link PluginApplicationContext} and create {@link RouterFunction} according to the
-     * reverse proxy configuration file then register them to {@link #routerFunctionRegistry}.
-     *
-     * @param haloPluginStartedEvent event for plugin started
-     */
-    @EventListener(HaloPluginStartedEvent.class)
-    public Mono<Void> onPluginStarted(HaloPluginStartedEvent haloPluginStartedEvent) {
-        PluginWrapper plugin = haloPluginStartedEvent.getPlugin();
-        // Obtain plugin application context
-        PluginApplicationContext pluginApplicationContext =
-            ExtensionContextRegistry.getInstance().getByPluginId(plugin.getPluginId());
-
-        return Flux.fromIterable(routerFunctions(pluginApplicationContext))
-            .concatWith(reverseProxyRouterFunctionFactory.create(pluginApplicationContext))
-            .reduce(RouterFunction::and)
-            .doOnNext(routerFunction ->
-                routerFunctionRegistry.put(plugin.getPluginId(), routerFunction))
-            .then();
-    }
-
-    @EventListener(HaloPluginStoppedEvent.class)
-    public void onPluginStopped(HaloPluginStoppedEvent haloPluginStoppedEvent) {
-        PluginWrapper plugin = haloPluginStoppedEvent.getPlugin();
-        routerFunctionRegistry.remove(plugin.getPluginId());
+        routerFunctions().forEach(routerFunction -> routerFunction.accept(visitor));
     }
 
     @SuppressWarnings("unchecked")
-    private List<RouterFunction<ServerResponse>> routerFunctions(
-        PluginApplicationContext applicationContext) {
-        List<RouterFunction<ServerResponse>> functions =
-            applicationContext.getBeanProvider(RouterFunction.class)
-                .orderedStream()
-                .map(router -> (RouterFunction<ServerResponse>) router)
-                .collect(Collectors.toList());
-        return (!CollectionUtils.isEmpty(functions) ? functions : Collections.emptyList());
+    private List<RouterFunction<ServerResponse>> routerFunctions() {
+        Stream<RouterFunction<ServerResponse>> routerFunctionStream =
+            ExtensionContextRegistry.getInstance().getPluginApplicationContexts()
+                .stream()
+                .flatMap(applicationContext -> applicationContext
+                    .getBeanProvider(RouterFunction.class)
+                    .orderedStream())
+                .map(router -> (RouterFunction<ServerResponse>) router);
+        return Stream.concat(routerFunctionStream,
+                reverseProxyRouterFunctionFactory.getRouterFunctions().stream())
+            .toList();
     }
 }
